--- a/views/retirement.ejs
+++ b/views/retirement.ejs
@@ -99,6 +99,7 @@
             flex-shrink: 0;
             outline: none;
             border: none;
+            cursor: pointer;
         }
         button > h1 {
             color: #000;
@@ -133,6 +134,7 @@
             flex-direction: row;
             align-items: center;
             justify-content: space-around;
+
         }
         .left {
             display: flex;
@@ -174,36 +176,48 @@
             <rect x="152.5" y="11.33" width="125" height="36.67" rx="18.335" fill="black"/>
             </svg>
         
-        <div class="button">
-            <div class="left">
-                <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M15.8045 31.7524C7.10492 31.7524 0.0529785 24.7004 0.0529785 16.0009C0.0529785 7.30291 7.10492 0.24939 15.8045 0.24939C24.504 0.24939 31.556 7.30291 31.556 16.0009C31.556 24.7004 24.504 31.7524 15.8045 31.7524ZM15.8045 8.12514C15.3867 8.12514 14.9861 8.29109 14.6907 8.58649C14.3953 8.88189 14.2293 9.28253 14.2293 9.70029V17.576C14.2293 17.9938 14.3953 18.3944 14.6907 18.6898C14.9861 18.9852 15.3867 19.1512 15.8045 19.1512C16.2222 19.1512 16.6229 18.9852 16.9183 18.6898C17.2137 18.3944 17.3796 17.9938 17.3796 17.576V9.70029C17.3796 9.28253 17.2137 8.88189 16.9183 8.58649C16.6229 8.29109 16.2222 8.12514 15.8045 8.12514ZM15.8045 23.8766C16.2222 23.8766 16.6229 23.7107 16.9183 23.4153C17.2137 23.1199 17.3796 22.7192 17.3796 22.3015C17.3796 21.8837 17.2137 21.4831 16.9183 21.1877C16.6229 20.8923 16.2222 20.7263 15.8045 20.7263C15.3867 20.7263 14.9861 20.8923 14.6907 21.1877C14.3953 21.4831 14.2293 21.8837 14.2293 22.3015C14.2293 22.7192 14.3953 23.1199 14.6907 23.4153C14.9861 23.7107 15.3867 23.8766 15.8045 23.8766Z" fill="white"/>
-                    </svg>
-                <p>Apply for Retirement</p>                    
-            </div>
-            <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M1.48047 7.16943C0.928184 7.16943 0.480469 7.61715 0.480469 8.16943C0.480469 8.72172 0.928184 9.16943 1.48047 9.16943L1.48047 7.16943ZM17.4277 8.87654C17.8182 8.48602 17.8182 7.85285 17.4277 7.46233L11.0637 1.09837C10.6732 0.707842 10.04 0.707842 9.64951 1.09837C9.25899 1.48889 9.25899 2.12206 9.64951 2.51258L15.3064 8.16943L9.64951 13.8263C9.25899 14.2168 9.25899 14.85 9.64951 15.2405C10.04 15.631 10.6732 15.631 11.0637 15.2405L17.4277 8.87654ZM1.48047 9.16943L16.7206 9.16943L16.7206 7.16943L1.48047 7.16943L1.48047 9.16943Z" fill="white"/>
-                </svg>                
-        </div>
-        
+        <% if (applyForRet) { %>
 
-        <div class="info">
-            <p class="name">Mr. <%= user.fname %></p>
-            <p><span>₹<%= pension %></span>/month</p>
-            <button disabled>
-                <h1>Withdraw</h1>
-                <p>(not eligible)</p>
-            </button>
-        </div>
-        
+            <div style="cursor: pointer;" id="apply" class="button">
+                <div class="left">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.8045 31.7524C7.10492 31.7524 0.0529785 24.7004 0.0529785 16.0009C0.0529785 7.30291 7.10492 0.24939 15.8045 0.24939C24.504 0.24939 31.556 7.30291 31.556 16.0009C31.556 24.7004 24.504 31.7524 15.8045 31.7524ZM15.8045 8.12514C15.3867 8.12514 14.9861 8.29109 14.6907 8.58649C14.3953 8.88189 14.2293 9.28253 14.2293 9.70029V17.576C14.2293 17.9938 14.3953 18.3944 14.6907 18.6898C14.9861 18.9852 15.3867 19.1512 15.8045 19.1512C16.2222 19.1512 16.6229 18.9852 16.9183 18.6898C17.2137 18.3944 17.3796 17.9938 17.3796 17.576V9.70029C17.3796 9.28253 17.2137 8.88189 16.9183 8.58649C16.6229 8.29109 16.2222 8.12514 15.8045 8.12514ZM15.8045 23.8766C16.2222 23.8766 16.6229 23.7107 16.9183 23.4153C17.2137 23.1199 17.3796 22.7192 17.3796 22.3015C17.3796 21.8837 17.2137 21.4831 16.9183 21.1877C16.6229 20.8923 16.2222 20.7263 15.8045 20.7263C15.3867 20.7263 14.9861 20.8923 14.6907 21.1877C14.3953 21.4831 14.2293 21.8837 14.2293 22.3015C14.2293 22.7192 14.3953 23.1199 14.6907 23.4153C14.9861 23.7107 15.3867 23.8766 15.8045 23.8766Z" fill="white"/>
+                        </svg>
+                    <p>Apply for Retirement</p>                    
+                </div>
+                <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1.48047 7.16943C0.928184 7.16943 0.480469 7.61715 0.480469 8.16943C0.480469 8.72172 0.928184 9.16943 1.48047 9.16943L1.48047 7.16943ZM17.4277 8.87654C17.8182 8.48602 17.8182 7.85285 17.4277 7.46233L11.0637 1.09837C10.6732 0.707842 10.04 0.707842 9.64951 1.09837C9.25899 1.48889 9.25899 2.12206 9.64951 2.51258L15.3064 8.16943L9.64951 13.8263C9.25899 14.2168 9.25899 14.85 9.64951 15.2405C10.04 15.631 10.6732 15.631 11.0637 15.2405L17.4277 8.87654ZM1.48047 9.16943L16.7206 9.16943L16.7206 7.16943L1.48047 7.16943L1.48047 9.16943Z" fill="white"/>
+                    </svg>                
+            </div>
+            
+
+            <div class="info">
+                <p class="name">Mr. <%= user.fname %></p>
+                <p><span>₹<%= pension %></span>/month</p>
+                <button disabled>
+                    <h1>Withdraw</h1>
+                    <p>(not eligible)</p>
+                </button>
+            </div>
+            <% } else { %>                
+
+                <div class="info" style="margin-top: 33vh;">
+                    <p class="name">Mr. <%= user.fname %></p>
+                    <p><span>₹<%= pension %></span>/month</p>
+                    <button style="background-color: #01B764">
+                        <h1 style="color: #FFF;">Withdraw</h1>
+                    </button>
+                </div>
+
+            <% } %>
         <svg onclick="window.history.back()"" id="back" class="back" width="12" height="21" viewBox="0 0 12 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M10.5304 1.49811L1.50391 10.5246L10.5304 19.551" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
 
         <div class="navbar">
-            <svg width="23" height="22" viewBox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M14.8979 21.7754V16.4018C14.8979 15.5466 14.5582 14.7266 13.9536 14.1219C13.3489 13.5173 12.5288 13.1776 11.6737 13.1776C10.8186 13.1776 9.99852 13.5173 9.39387 14.1219C8.78921 14.7266 8.44952 15.5466 8.44952 16.4018V21.7754H3.07586C2.50578 21.7754 1.95906 21.549 1.55596 21.1459C1.15285 20.7428 0.926392 20.196 0.926392 19.626V7.94576C0.926388 7.57458 1.02251 7.20972 1.20538 6.88672C1.38826 6.56371 1.65167 6.29357 1.96996 6.1026L10.5678 0.943878C10.9019 0.743438 11.2841 0.637558 11.6737 0.637558C12.0633 0.637558 12.4456 0.743438 12.7796 0.943878L21.3775 6.1026C21.6958 6.29357 21.9592 6.56371 22.1421 6.88672C22.3249 7.20972 22.4211 7.57458 22.421 7.94576V19.626C22.421 20.196 22.1946 20.7428 21.7915 21.1459C21.3884 21.549 20.8417 21.7754 20.2716 21.7754H14.8979Z" fill="black"/>
-                </svg>
+            <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M13.9715 21.1379V15.7642C13.9715 14.9091 13.6318 14.089 13.0272 13.4844C12.4225 12.8797 11.6024 12.54 10.7473 12.54C9.89222 12.54 9.07213 12.8797 8.46748 13.4844C7.86282 14.089 7.52313 14.9091 7.52313 15.7642V21.1379H2.14947C1.57939 21.1379 1.03267 20.9114 0.629564 20.5083C0.226461 20.1052 0 19.5585 0 18.9884V7.3082C-3.57106e-06 6.93702 0.096114 6.57216 0.278993 6.24916C0.461872 5.92615 0.72528 5.65601 1.04357 5.46504L9.64143 0.30632C9.97549 0.10588 10.3577 0 10.7473 0C11.1369 0 11.5192 0.10588 11.8532 0.30632L20.4511 5.46504C20.7694 5.65601 21.0328 5.92615 21.2157 6.24916C21.3985 6.57216 21.4947 6.93702 21.4947 7.3082V18.9884C21.4947 19.5585 21.2682 20.1052 20.8651 20.5083C20.462 20.9114 19.9153 21.1379 19.3452 21.1379H13.9715Z" fill="black" fill-opacity="0.4"/>
+                </svg>                
 
             <svg width="28" height="21" viewBox="0 0 28 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M27.6671 6.66318H0.798767V4.06591C0.798767 3.03265 1.22338 2.04171 1.9792 1.31109C2.73502 0.580466 3.76013 0.170006 4.82902 0.170006L23.6368 0.170006C24.7057 0.170006 25.7308 0.580466 26.4867 1.31109C27.2425 2.04171 27.6671 3.03265 27.6671 4.06591V6.66318ZM27.6671 9.26046V17.0523C27.6671 18.0855 27.2425 19.0765 26.4867 19.8071C25.7308 20.5377 24.7057 20.9482 23.6368 20.9482H4.82902C3.76013 20.9482 2.73502 20.5377 1.9792 19.8071C1.22338 19.0765 0.798767 18.0855 0.798767 17.0523L0.798767 9.26046H9.02853C9.32736 10.375 10.0006 11.3621 10.9425 12.0667C11.8845 12.7714 13.0419 13.1537 14.2329 13.1537C15.424 13.1537 16.5813 12.7714 17.5233 12.0667C18.4653 11.3621 19.1385 10.375 19.4373 9.26046H27.6671Z" fill="black" fill-opacity="0.4"/>
@@ -217,9 +231,9 @@
                         
 
             <svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0.529297 19.0561C0.529297 15.7255 3.22931 13.0255 6.55995 13.0255H14.1924C17.523 13.0255 20.223 15.7255 20.223 19.0561V21.9159C20.223 22.6399 19.6361 23.2269 18.912 23.2269H1.84031C1.11626 23.2269 0.529297 22.6399 0.529297 21.9159V19.0561Z" fill="black" fill-opacity="0.4"/>
-                <circle cx="10.376" cy="5.47015" r="5.46076" fill="black" fill-opacity="0.4"/>
-                </svg>                    
+                <path d="M0.529297 19.0561C0.529297 15.7255 3.22931 13.0255 6.55995 13.0255H14.1924C17.523 13.0255 20.223 15.7255 20.223 19.0561V21.9159C20.223 22.6399 19.6361 23.2269 18.912 23.2269H1.84031C1.11626 23.2269 0.529297 22.6399 0.529297 21.9159V19.0561Z" fill="black"/>
+                <circle cx="10.376" cy="5.47015" r="5.46076" fill="black"/>
+                </svg>                                    
                     
         </div>
 
@@ -242,5 +256,9 @@
         document.getElementById('up-time').style.display = 'none'
     }
 
+
+    document.getElementById('apply').addEventListener('click', () => {
+        window.location.href = '/kuchh to hai'
+    })
 </script>
 </html>
