--- a/views/retirement.ejs
+++ b/views/retirement.ejs
@@ -176,7 +176,7 @@
             <rect x="152.5" y="11.33" width="125" height="36.67" rx="18.335" fill="black"/>
             </svg>
         
-        <% if (applyForRet) { %>
+        <% if (!applyForRet) { %>
 
             <div style="cursor: pointer;" id="apply" class="button">
                 <div class="left">
