made profile and also updated navbar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -213,6 +213,7 @@
         .navbar > svg {
             width: 3vh;
             aspect-ratio: inherit;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -321,7 +322,7 @@
                     
                         
 
-            <svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg onclick="window.location.href='/profile'" width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0.529297 19.0561C0.529297 15.7255 3.22931 13.0255 6.55995 13.0255H14.1924C17.523 13.0255 20.223 15.7255 20.223 19.0561V21.9159C20.223 22.6399 19.6361 23.2269 18.912 23.2269H1.84031C1.11626 23.2269 0.529297 22.6399 0.529297 21.9159V19.0561Z" fill="black" fill-opacity="0.4"/>
                 <circle cx="10.376" cy="5.47015" r="5.46076" fill="black" fill-opacity="0.4"/>
                 </svg>                    
