--- a/views/level.ejs
+++ b/views/level.ejs
@@ -26,6 +26,7 @@
         .navbar > svg {
             width: 3vh;
             aspect-ratio: inherit;
+            cursor: pointer;
         }
 
         .up-time {
@@ -186,7 +187,7 @@
         <% } %>
 
         <div class="navbar">
-            <svg width="23" height="22" viewBox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg onclick="window.location.href='/'" width="23" height="22" viewBox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14.8979 21.7754V16.4018C14.8979 15.5466 14.5582 14.7266 13.9536 14.1219C13.3489 13.5173 12.5288 13.1776 11.6737 13.1776C10.8186 13.1776 9.99852 13.5173 9.39387 14.1219C8.78921 14.7266 8.44952 15.5466 8.44952 16.4018V21.7754H3.07586C2.50578 21.7754 1.95906 21.549 1.55596 21.1459C1.15285 20.7428 0.926392 20.196 0.926392 19.626V7.94576C0.926388 7.57458 1.02251 7.20972 1.20538 6.88672C1.38826 6.56371 1.65167 6.29357 1.96996 6.1026L10.5678 0.943878C10.9019 0.743438 11.2841 0.637558 11.6737 0.637558C12.0633 0.637558 12.4456 0.743438 12.7796 0.943878L21.3775 6.1026C21.6958 6.29357 21.9592 6.56371 22.1421 6.88672C22.3249 7.20972 22.4211 7.57458 22.421 7.94576V19.626C22.421 20.196 22.1946 20.7428 21.7915 21.1459C21.3884 21.549 20.8417 21.7754 20.2716 21.7754H14.8979Z" fill="black"/>
                 </svg>
 
@@ -201,7 +202,7 @@
                     
                         
 
-            <svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg onclick="window.location.href='/profile'" width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0.529297 19.0561C0.529297 15.7255 3.22931 13.0255 6.55995 13.0255H14.1924C17.523 13.0255 20.223 15.7255 20.223 19.0561V21.9159C20.223 22.6399 19.6361 23.2269 18.912 23.2269H1.84031C1.11626 23.2269 0.529297 22.6399 0.529297 21.9159V19.0561Z" fill="black" fill-opacity="0.4"/>
                 <circle cx="10.376" cy="5.47015" r="5.46076" fill="black" fill-opacity="0.4"/>
                 </svg>                    
