--- a/views/partials/phone.ejs
+++ b/views/partials/phone.ejs
@@ -14,6 +14,9 @@
             font-weight: 400;
             letter-spacing: -0.47px;
         }
+        ::-webkit-scrollbar {
+            display: none;
+        }
         body {
             display: flex;
             flex-direction: column;
@@ -29,7 +32,7 @@
             width: 45vh;
             background: #fff;
             border-radius: 56px;
-
+            overflow: auto;
             padding-top: 6vh;
             padding-left: 3.5vh;
             padding-right: 3.5vh;
