--- a/views/track.ejs
+++ b/views/track.ejs
@@ -32,6 +32,7 @@
             <option value="sesamium">Sesamium</option>
             <option value="copra">Copra</option>
         </select>
+        <input type="number" name="quantity" placeholder="Weight of Seeds (kg):">
         <input type="submit"><br>
         <% if (error) { %>
             <p><%= error %></p>
