--- a/views/register.ejs
+++ b/views/register.ejs
@@ -159,7 +159,7 @@
                     <p id='error' style="display: none;"><%= error %></p>
                     <% } %>
                  <button type="submit">Continue</button>
-                 <p class="account-p">Don't have an account? <a href="/register">Create One!</a></p>
+                 <p class="account-p">Already have an account? <a href="/login">Login instead!</a></p>
             </form>
 
         <svg class="down-bar" width="430" height="34" viewBox="0 0 430 34" fill="none" xmlns="http://www.w3.org/2000/svg">
