--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
             top: -1vh;
             margin-left: -3.5vh;
         }
-
+        * {z-index: 2}
         .down-bar {
             width: 100%;
             position: absolute; 
@@ -46,11 +46,41 @@
             width: 100%;
             z-index: 10000000;
         }
-
+        .chartContainer {
+            z-index: 1;
+            height: 34vh;
+            width: 34vh;
+            top: 2.5vh;
+            position: absolute;
+            transform: rotate(-180deg);
+            transition: 0.5s;
+        }
+        .chartColored {
+            width: 34vh;
+            height: 34vh;
+            border: 3vh solid #ef9d22;
+            border-radius: 32vh;
+            position: absolute;
+            top: 0;
+            clip-path: polygon(0 0, 100% 0, 100% 50%, 0% 50%);
+        }
+        .chartBlank {
+            width: 34vh;
+            height: 34vh;
+            border: 3vh solid #cdcdcd;
+            border-radius: 32vh;
+        }
+        .chartHider {
+            position: absolute;
+            top: 19.5vh;
+            background-color: white;
+            width: 34vh;
+            height: 17vh;
+        }
         .loyalty > p {
             color: rgba(0, 0, 0, 0.70);
             font-family: Outfit;
-            font-size: 0.7rem;
+            font-size: 1.7vh;
             font-style: normal;
             font-weight: 400;
             line-height: normal;
@@ -66,7 +96,7 @@
             margin-top: 5vh;
         }
         .box {
-            width: 12vh;
+            width: 30%;
             height: 12vh;
             flex-shrink: 0;
             border-radius: 6px;
@@ -234,16 +264,13 @@
         <h1 class="heading">Welcome, <%= user.fname %>! 👋</h1>
 
         <div id="loyalty" class="loyalty">
-            <% if (user.loyaltyLevel == 'Bronze') { %>
-                <img id="loyaltyImg" class="loyaltyImage" src="https://cdn.discordapp.com/attachments/1168887401884680215/1264652436681789560/image.png?ex=669ea6dd&is=669d555d&hm=f4c5038c42a92f609b54da3320b2f676e00e84dbe57bdf1c5e9a590fcab66b7f&" alt="">
-            <% } else if (user.loyaltyLevel == 'Silver') { %>
-                <img id="loyaltyImg" class="loyaltyImage" src="https://cdn.discordapp.com/attachments/1168887401884680215/1264648847930429460/image.png?ex=669ea385&is=669d5205&hm=dc56de9aba31df9dfed4fa2410c2c5a42964354d35e01b0dd1f5f4c6f9785e3b&" alt="">
-            <% } else { %>
-                <img id="loyaltyImg" class="loyaltyImage" src="https://cdn.discordapp.com/attachments/1168887401884680215/1264648847930429460/image.png?ex=669ea385&is=669d5205&hm=dc56de9aba31df9dfed4fa2410c2c5a42964354d35e01b0dd1f5f4c6f9785e3b&" alt="">
-            <% } %>
-
+            <div class="chartContainer" id="chart">
+                <div class="chartColored" id="chartColored"></div>
+                <div class="chartBlank"></div>
+            </div>
+            <div class="chartHider"></div>
             <p>YOUR CURRENT TIER></p>
-            <h1><%= user.loyaltyLevel %></h1>
+            <h1 style="font-size: 5.6vh"><%= user.loyaltyLevel %></h1>
         </div>
 
         <div id="boxes" class="boxes">
@@ -311,7 +338,7 @@
                 <path d="M14.8979 21.7754V16.4018C14.8979 15.5466 14.5582 14.7266 13.9536 14.1219C13.3489 13.5173 12.5288 13.1776 11.6737 13.1776C10.8186 13.1776 9.99852 13.5173 9.39387 14.1219C8.78921 14.7266 8.44952 15.5466 8.44952 16.4018V21.7754H3.07586C2.50578 21.7754 1.95906 21.549 1.55596 21.1459C1.15285 20.7428 0.926392 20.196 0.926392 19.626V7.94576C0.926388 7.57458 1.02251 7.20972 1.20538 6.88672C1.38826 6.56371 1.65167 6.29357 1.96996 6.1026L10.5678 0.943878C10.9019 0.743438 11.2841 0.637558 11.6737 0.637558C12.0633 0.637558 12.4456 0.743438 12.7796 0.943878L21.3775 6.1026C21.6958 6.29357 21.9592 6.56371 22.1421 6.88672C22.3249 7.20972 22.4211 7.57458 22.421 7.94576V19.626C22.421 20.196 22.1946 20.7428 21.7915 21.1459C21.3884 21.549 20.8417 21.7754 20.2716 21.7754H14.8979Z" fill="black"/>
                 </svg>
 
-            <svg width="28" height="21" viewBox="0 0 28 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg onclick="window.location.href = '/job'" width="28" height="21" viewBox="0 0 28 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M27.6671 6.66318H0.798767V4.06591C0.798767 3.03265 1.22338 2.04171 1.9792 1.31109C2.73502 0.580466 3.76013 0.170006 4.82902 0.170006L23.6368 0.170006C24.7057 0.170006 25.7308 0.580466 26.4867 1.31109C27.2425 2.04171 27.6671 3.03265 27.6671 4.06591V6.66318ZM27.6671 9.26046V17.0523C27.6671 18.0855 27.2425 19.0765 26.4867 19.8071C25.7308 20.5377 24.7057 20.9482 23.6368 20.9482H4.82902C3.76013 20.9482 2.73502 20.5377 1.9792 19.8071C1.22338 19.0765 0.798767 18.0855 0.798767 17.0523L0.798767 9.26046H9.02853C9.32736 10.375 10.0006 11.3621 10.9425 12.0667C11.8845 12.7714 13.0419 13.1537 14.2329 13.1537C15.424 13.1537 16.5813 12.7714 17.5233 12.0667C18.4653 11.3621 19.1385 10.375 19.4373 9.26046H27.6671Z" fill="black" fill-opacity="0.4"/>
                 </svg>
                     
@@ -361,7 +388,21 @@
     loyalty.addEventListener('click', () => {
         window.location.href = '/level'
     })
-
+    window.onload = () => {
+        const currentLevel = "<%= user.loyaltyLevel %>"
+        var chartColor = '#ef9d22'
+        if (currentLevel == 'Silver') {
+            chartColor = '#777'
+        } else if (currentLevel == 'Gold') {
+            chartColor = '#ffd819'
+        } else if (currentLevel == 'Platinum') {
+            chartColor = 'cyan'
+        }
+        document.getElementById('chartColored').style.border = `3vh solid ${chartColor}`
+        const userPercentage = <%= percentage %>
+        const rotateDeg = -(180 - (180 * (userPercentage / 100)))
+        document.getElementById('chart').style.transform = `rotate(${rotateDeg}deg)`
+    }
 
 </script>
 </html>
