--- a/views/partials/phone.ejs
+++ b/views/partials/phone.ejs
@@ -36,7 +36,7 @@
             padding-top: 6vh;
             padding-left: 3.5vh;
             padding-right: 3.5vh;
-
+            z-index: 0;
             position: relative;
 
             display: flex;
