discord ki ma ki chut

--- a/views/events.ejs
+++ b/views/events.ejs
@@ -149,11 +149,11 @@
         
         <h1>Upcoming Events</h1>
 
-        <img src="https://cdn.discordapp.com/attachments/1168887401884680215/1264955196342140928/image.png?ex=669fc0d4&is=669e6f54&hm=87fa63b8fe2a0c346b30eb9535be1035125b3cd38175aa17a81023eba8bdc6e3&" alt="events">
+        <img src="eventsTestpng.png" alt="events">
         
         <div class="events">
             <div class="event">
-                <img src="https://cdn.discordapp.com/attachments/1168887401884680215/1264955434721349744/image.png?ex=669fc10d&is=669e6f8d&hm=ea2ed851a2d5d432ebd3111c7b782594521974899f8f3b7241903d261b8f6a08&" alt="">
+                <img src="ghodapng.png" alt="">
                 <div class="info">
                     <h1>Traditional Ploughing</h1>
                     <p>Firozepur, Punjab | ₹ 100 | 6pm-7pm</p>
@@ -161,7 +161,7 @@
                 </div>
             </div>
             <div style="background-color: rgba(133, 224, 163, 0.5);" class="event">
-                <img src="https://cdn.discordapp.com/attachments/1168887401884680215/1264955434721349744/image.png?ex=669fc10d&is=669e6f8d&hm=ea2ed851a2d5d432ebd3111c7b782594521974899f8f3b7241903d261b8f6a08&" alt="">
+                <img src="ghodapng.png" alt="">
                 <div class="info">
                     <h1 style="color: #000;">Sowing Techniques</h1>
                     <p style="color: #000;">Panipat, Haryana | ₹ 160 | 3pm-5pm</p>
@@ -169,7 +169,7 @@
                 </div>
             </div>
             <div style="background-color: rgba(220, 75, 82, 0.5);" class="event">
-                <img src="https://cdn.discordapp.com/attachments/1168887401884680215/1264955434721349744/image.png?ex=669fc10d&is=669e6f8d&hm=ea2ed851a2d5d432ebd3111c7b782594521974899f8f3b7241903d261b8f6a08&" alt="">
+                <img src="ghodapng.png" alt="">
                 <div class="info">
                     <h1>Kheti Baadi</h1>
                     <p>Chandigarh, Punjab | ₹ 300 | 8am-10am</p>
