--- a/views/level.ejs
+++ b/views/level.ejs
@@ -177,13 +177,13 @@
         </div>
 
         <% if (user.loyaltyLevel == 'Bronze') { %>
-            <img class="image" src="https://cdn.discordapp.com/attachments/1168887401884680215/1264844512967266344/image.png?ex=669f59bf&is=669e083f&hm=c2221d506f467167a1e13f0010e2e5cadf9d0e8dc2e044365d92a6430899b80a&" alt="">
+            <img class="image" src="bronze.png" alt="">
         <% } else if (user.loyaltyLevel == 'Silver') { %>
-            <img class="image" src="https://cdn.discordapp.com/attachments/1168887401884680215/1264853226738417724/image.png?ex=669f61dd&is=669e105d&hm=33516d17c0e916a879b53b1fb40b8023fb0a4ec26ee75246133fa5ab6aa62725&" alt="">
+            <img class="image" src="silver.png" alt="">
         <% } else if (user.loyaltyLevel == 'Gold' ) { %>
-            <img class="image" src="https://cdn.discordapp.com/attachments/1168887401884680215/1264853278697455737/image.png?ex=669f61e9&is=669e1069&hm=e12973fd5a63d3b19bb9a7e3b4a35ff510cb6e32ec1218bd6d27fbace75b2fc6&" alt="">
+            <img class="image" src="gold.png" alt="">
         <% } else { %>
-            <img class="image" src="https://cdn.discordapp.com/attachments/1168887401884680215/1264853304609996920/image.png?ex=669f61ef&is=669e106f&hm=7e4117732ae6a99089dc70264405394fdbd0256ca582b2c87017b97a55982429&" alt="">
+            <img class="image" src="platinum.png" alt="">
         <% } %>
 
         <div class="navbar">
