--- a/views/login.ejs
+++ b/views/login.ejs
@@ -135,7 +135,7 @@
              <p class="account-p">Don't have an account? <a href="/register">Create One!</a></p>
         </form>
 
-        <img id="image" class="image" src="https://cdn.discordapp.com/attachments/1168887401884680215/1264551056310927490/image.png?ex=669e4872&is=669cf6f2&hm=55301d4366fafd922427197488b7c36360f1d179a2d4a0177b18fb1db93aa9fc&" alt="">
+        <img id="image" class="image" src="login.png" alt="">
 
         <svg class="down-bar" width="430" height="34" viewBox="0 0 430 34" fill="none" xmlns="http://www.w3.org/2000/svg">
             <rect x="139" y="21" width="152" height="5" rx="2.5" fill="black" fill-opacity="0.6"/>
