--- a/views/index.ejs
+++ b/views/index.ejs
@@ -262,7 +262,7 @@
 
         <h1 class="heading">Welcome, <%= user.fname %>! 👋</h1>
 
-        <div id="loyalty" class="loyalty" onclick="window.location.href = '/loyalty'">
+        <div id="loyalty" class="loyalty" onclick="window.location.href = '/level'">
             <div class="chartContainer" id="chart">
                 <div class="chartColored" id="chartColored"></div>
                 <div class="chartBlank"></div>
